# mcp-server-github-codeowners

./: Dockerfile  pyproject.toml  server.py
.github/workflows/: docker-image.yml
