[project]
name = "mcp-github-owners"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "codeowners>=0.8.0",
    "fastmcp>=2.3.3",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.scripts]
mcp-github-owners = "server:main"

[tool.uv]
package = true
